# mini-llama

./: README.md  pyproject.toml
src/mini_llama/: config_minillama.py  main.py  modeling_minillama.py
