[project]
name = "mini_llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "datasets>=4.4.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.scripts]
minillama = "mini_llama.main:cli"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
